Have JUnit tests from from Gradle
Disables monocle because they don't use set their module name, and the JVM-derived one is invalid